checker/examples/units-extension/Expected.txt
Demo.java:15: error: [assignment.type.incompatible] incompatible types in assignment.
        frq = 5;
              ^
  found   : @UnknownUnits int
  required: @Hz int
Demo.java:66: error: [assignment.type.incompatible] incompatible types in assignment.
        @Hz int badTernaryAssign = seconds > 10 ? hertz : kilohertz;
                                                ^
  found   : @Frequency int
  required: @Hz int
2 errors
